# pufa-rs

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: config.rs  main.rs  pufa.rs  server.rs  use_case.rs
src/pufa/: cache.rs  main.rs  new_cache.rs  old_cache.rs  redis_cache.rs  rwlock_cache.rs
src/use_case/: get_actual_word_query.rs  get_cached_word_query.rs  get_word_query.rs
