[package]
name = "pufa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.10.0"
reqwest = "0.12.2"
tokio={ version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.4"
chrono = "0.4.37"
base64 = "0.21.7"
axum = "0.7.5"
