[package]
name = "pufa-rs"
version = "1.2.0"
authors = ["Filipponik"]
edition = "2021"
description = "Today pufa word"
readme = "README.md"
repository = "https://github.com/Filipponik/pufa-rs"
keywords = ["axum-rs", "server", "web-server"]
categories = ["web-programming", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
reqwest = "0.12.2"
tokio={ version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.4"
chrono = "0.4.37"
base64 = "0.22.0"
axum = "0.8.1"
lazy_static = "1.4.0"
thiserror = "2.0.11"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.41"
